@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fixed vCard WORKFAX issue (#1488046)
 - Add vCard's Profile URL support (#1488062)
 - jQuery 1.6.3
 - Fix imap_cache setting to values other than 'db' (#1488060)
